--- a/templates/about.html
+++ b/templates/about.html
@@ -65,8 +65,10 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius.
-                    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem
+                    quis varius.
+                    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                    himenaeos. Cras
                     ultrices hendrerit nisl.</p>
                   <h3>Ut enim ad minim </h3>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -74,12 +76,14 @@
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     <h3>Maecenas luctus at sem quis varius</h3>
                     <p>
-                      Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                      Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan
+                      Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                      inceptos himenaeos.
+                      Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem
+                      venenatis. Morbi accumsan
                       iaculis blandit. Cras ultrices hendrerit nisl.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./static/assets/images/profil.jpg" class="img-responsive" alt="">
+                  <img src="./static/assets/images/profile-aps-03.png" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
@@ -96,7 +100,11 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/"
+          <p>&copy;
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+            AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
               title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
               title="Beautiful Free Images">Unsplash</a></p>
         </div>
