--- a/templates/contact.html
+++ b/templates/contact.html
@@ -83,7 +83,7 @@
                         <span class="fa-icon">
                           <i class="fa fa-phone" aria-hidden="true"></i>
                         </span>
-                        + (316) 655-5227
+                        <a href="tel:+3166555227">+ (316) 655-5227</a>
                       </li>
                       <li>
                         <span class="fa-icon">
@@ -98,15 +98,18 @@
                         Arvada, CO
                       </li>
                     </ul>
-                    <h3>Follow me on social networks</h3>
-                    <a href="http://www.facebook.com" title="" class="fa-icon">
+                    <h3>Social Networks</h3>
+                    <!-- <a href="http://www.facebook.com" title="" class="fa-icon">
                       <i class="fa fa-facebook"></i>
                     </a>
                     <a href="http://www.twitter.com" title="" class="fa-icon">
                       <i class="fa fa-twitter"></i>
+                    </a> -->
+                    <a href="http://www.linkedin.com/in/austin-scobee" title="" class="fa-icon">
+                      <i class="fa fa-linkedin-square"></i>
                     </a>
-                    <a href="http://www.linkedin.com" title="" class="fa-icon">
-                      <i class="fa fa-linkedin"></i>
+                    <a href="https://github.com/ascobee" title="" class="fa-icon">
+                      <i class="fa fa-github-square"></i>
                     </a>
 
                   </div>
@@ -126,7 +129,11 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/"
+          <p>&copy;
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+            AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
               title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
               title="Beautiful Free Images">Unsplash</a></p>
         </div>
