--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -2,96 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width,initial-scale=1" name="viewport">
-    <meta content="description" name="description">
-    <meta name="google" content="notranslate" />
-    <meta content="Mashup templates have been developped by Orson.io team" name="author">
+  <meta charset="UTF-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="description" name="description">
+  <meta name="google" content="notranslate" />
+  <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
 
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="./static/apple-icon-180x180.png"> -->
-    <link href="./static/favicon.ico" rel="icon">
+  <!-- <link rel="apple-touch-icon" sizes="180x180" href="./static/apple-icon-180x180.png"> -->
+  <link href="./static/favicon.ico" rel="icon">
 
-    <title>Contact me</title>
+  <title>Contact me</title>
 
-    <link href="./static/main.3f6952e4.css" rel="stylesheet">
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
 
 <body class="">
-    <div id="site-border-left"></div>
-    <div id="site-border-right"></div>
-    <div id="site-border-top"></div>
-    <div id="site-border-bottom"></div>
-    <!-- Add your content of header -->
-    <header>
-        <nav class="navbar  navbar-fixed-top navbar-default">
-            <div class="container">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#navbar-collapse" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+  <div id="site-border-left"></div>
+  <div id="site-border-right"></div>
+  <div id="site-border-top"></div>
+  <div id="site-border-bottom"></div>
+  <!-- Add your content of header -->
+  <header>
+    <nav class="navbar  navbar-fixed-top navbar-default">
+      <div class="container">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
+          aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
 
-                <div class="collapse navbar-collapse" id="navbar-collapse">
-                    <ul class="nav navbar-nav ">
-                        <li><a href="./index.html" title="">01 : Home</a></li>
-                        <li><a href="./works.html" title="">02 : Works</a></li>
-                        <li><a href="./about.html" title="">03 : About me</a></li>
-                        <li><a href="./contact.html" title="">04 : Contact</a></li>
-                        <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
-                    </ul>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav ">
+            <li><a href="./index.html" title="">01 : Home</a></li>
+            <li><a href="./works.html" title="">02 : Works</a></li>
+            <li><a href="./about.html" title="">03 : About me</a></li>
+            <li><a href="./contact.html" title="">04 : Contact</a></li>
+            <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
+          </ul>
 
 
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <div class="section-container">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="section-container-spacer text-center">
-                        <h1 class="h2">04 : Contact me</h1>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-10 col-md-offset-1">
-                            Thank You! I will get in touch with you soon!
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
         </div>
+      </div>
+    </nav>
+  </header>
+
+  <div class="section-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="section-container-spacer text-center">
+            <h1 class="h2">04 : Contact me</h1>
+          </div>
+
+          <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+              Thank You! I will get in touch with you soon!
+            </div>
+
+          </div>
+
+        </div>
+      </div>
     </div>
+  </div>
 
 
-    <footer class="footer-container text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/"
-                            title="Create website with free html template">Mashup Template</a>/<a
-                            href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
-                </div>
-            </div>
+  <footer class="footer-container text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <p>&copy;
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+            AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
+              title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
+              title="Beautiful Free Images">Unsplash</a></p>
         </div>
-    </footer>
+      </div>
+    </div>
+  </footer>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function (event) {
-            navActivePage();
-        });
-    </script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      navActivePage();
+    });
+  </script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
 
 <script>
   (function (i, s, o, g, r, a, m) {
@@ -105,7 +109,7 @@
 </script>
 
 -->
-    <script type="text/javascript" src="./static/main.70a66962.js"></script>
+  <script type="text/javascript" src="./static/main.70a66962.js"></script>
 </body>
 
 </html>
