--- a/templates/work.html
+++ b/templates/work.html
@@ -108,7 +108,11 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/"
+          <p>&copy;
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+            AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
               title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
               title="Beautiful Free Images">Unsplash</a></p>
         </div>
