--- a/templates/contact.html
+++ b/templates/contact.html
@@ -108,7 +108,13 @@
                     <a href="http://www.linkedin.com/in/austin-scobee" title="" class="fa-icon">
                       <i class="fa fa-linkedin-square"></i>
                     </a>
-                    <a href="https://github.com/ascobee" title="" class="fa-icon">
+                    <a href="http://www.linkedin.com/in/austin-scobee" title="" class="fa-icon">
+                      <i class="fa fa-linkedin-square"></i>
+                    </a>
+                    <a href="http://www.linkedin.com/in/austin-scobee" title="" class="fa-icon">
+                      <i class="fa fa-linkedin"></i>
+                    </a>
+                    <a href="http://github.com/ascobee" title="" class="fa-icon">
                       <i class="fa fa-github-square"></i>
                     </a>
 
