--- a/templates/contact.html
+++ b/templates/contact.html
@@ -106,16 +106,10 @@
                       <i class="fa fa-twitter"></i>
                     </a> -->
                     <a href="http://www.linkedin.com/in/austin-scobee" title="" class="fa-icon">
-                      <i class="fa fa-linkedin-square"></i>
-                    </a>
-                    <a href="http://www.linkedin.com/in/austin-scobee" title="" class="fa-icon">
-                      <i class="fa fa-linkedin-square"></i>
-                    </a>
-                    <a href="http://www.linkedin.com/in/austin-scobee" title="" class="fa-icon">
                       <i class="fa fa-linkedin"></i>
                     </a>
                     <a href="http://github.com/ascobee" title="" class="fa-icon">
-                      <i class="fa fa-github-square"></i>
+                      <i class="fa fa-github-alt"></i>
                     </a>
 
                   </div>
