--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,6 +12,8 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
 
+  <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
+
   <!-- <link rel="apple-touch-icon" sizes="180x180" href="./static/apple-icon-180x180.png"> -->
   <link href="./static/favicon.ico" rel="icon">
 
@@ -81,35 +83,29 @@
                     <ul class="list-unstyled">
                       <li>
                         <span class="fa-icon">
-                          <i class="fa fa-phone" aria-hidden="true"></i>
+                          <i class="fas fa-phone-alt" aria-hidden="true"></i>
                         </span>
                         <a href="tel:+3166555227">+ (316) 655-5227</a>
                       </li>
                       <li>
                         <span class="fa-icon">
-                          <i class="fa fa-at" aria-hidden="true"></i>
+                          <i class="fas fa-at" aria-hidden="true"></i>
                         </span>
                         austin.scobee@gmail.com
                       </li>
                       <li>
                         <span class="fa-icon">
-                          <i class="fa fa fa-map-marker" aria-hidden="true"></i>
+                          <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
                         </span>
                         Arvada, CO
                       </li>
                     </ul>
                     <h3>Social Networks</h3>
-                    <!-- <a href="http://www.facebook.com" title="" class="fa-icon">
-                      <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="http://www.twitter.com" title="" class="fa-icon">
-                      <i class="fa fa-twitter"></i>
-                    </a> -->
                     <a href="http://www.linkedin.com/in/austin-scobee" title="" class="fa-icon">
-                      <i class="fa fa-linkedin"></i>
+                      <i class="fab fa-linkedin-in fa-lg"></i>
                     </a>
                     <a href="http://github.com/ascobee" title="" class="fa-icon">
-                      <i class="fa fa-github-alt"></i>
+                      <i class="fab fa-github-alt fa-lg"></i>
                     </a>
 
                   </div>
@@ -129,7 +125,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <p>&copy;
+          <p>
+            <i class="far fa-copyright fa-sm"></i>
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
