--- a/templates/works.html
+++ b/templates/works.html
@@ -12,6 +12,8 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
 
+  <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
+
   <!-- <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png"> -->
   <link href="./static/favicon.ico" rel="icon">
 
@@ -175,7 +177,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <p>&copy;
+          <p>
+            <i class="far fa-copyright fa-sm"></i>
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
