Cleaning up code

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,6 @@
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
-  <!-- <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png"> -->
   <link href="./static/favicon.ico" rel="icon">
 
   <title>About me</title>
@@ -103,6 +102,7 @@
       <div class="row">
         <div class="col-xs-12">
           <p>
+            Copyright
             <i class="far fa-copyright fa-sm"></i>
             <script type="text/javascript">
               document.write(new Date().getFullYear());
