--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,7 +14,6 @@
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
-  <!-- <link rel="apple-touch-icon" sizes="180x180" href="./static/apple-icon-180x180.png"> -->
   <link href="./static/favicon.ico" rel="icon">
 
   <title>Contact me</title>
@@ -83,19 +82,19 @@
                     <ul class="list-unstyled">
                       <li>
                         <span class="fa-icon">
-                          <i class="fas fa-phone-alt" aria-hidden="true"></i>
+                          <i class="fas fa-phone-alt fa-sm" aria-hidden="true"></i>
                         </span>
                         <a href="tel:+3166555227">+ (316) 655-5227</a>
                       </li>
                       <li>
                         <span class="fa-icon">
-                          <i class="fas fa-at" aria-hidden="true"></i>
+                          <i class="fas fa-at fa-sm" aria-hidden="true"></i>
                         </span>
-                        austin.scobee@gmail.com
+                        austin.scobee&commat;gmail.com
                       </li>
                       <li>
                         <span class="fa-icon">
-                          <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+                          <i class="fas fa-map-marker-alt fa-sm" aria-hidden="true"></i>
                         </span>
                         Arvada, CO
                       </li>
@@ -126,6 +125,7 @@
       <div class="row">
         <div class="col-xs-12">
           <p>
+            Copyright
             <i class="far fa-copyright fa-sm"></i>
             <script type="text/javascript">
               document.write(new Date().getFullYear());
