--- a/templates/work.html
+++ b/templates/work.html
@@ -16,7 +16,7 @@
 
   <link href="./static/favicon.ico" rel="icon">
 
-  <title>Title page</title>
+  <title>001 : WORK</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -44,7 +44,6 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About me</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
           </ul>
 
 
