--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                     <ul class="nav navbar-nav ">
                         <li><a href="./index.html" title="">01 : Home</a></li>
                         <li><a href="./works.html" title="">02 : Works</a></li>
-                        <li><a href="./about.html" title="">03 : About me</a></li>
+                        <li><a href="./about.html" title="">03 : About</a></li>
                         <li><a href="./contact.html" title="">04 : Contact</a></li>
                         <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
                     </ul>
@@ -63,8 +63,8 @@
                             <h1>Hello,<br>
                                 <span id="typed-strings">
                                     <span>I'm Austin Scobee</span>
+                                    <span>Software Engineer</span>
                                     <span>Python Developer</span>
-                                    <span>Working as a Freelancer</span>
                                 </span>
                                 <span id="typed"></span>
                             </h1>
