Updated about and index

--- a/templates/about.html
+++ b/templates/about.html
@@ -65,23 +65,22 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem
-                    quis varius.
-                    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                    himenaeos. Cras
-                    ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    <h3>Maecenas luctus at sem quis varius</h3>
-                    <p>
-                      Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-                      inceptos himenaeos.
-                      Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem
-                      venenatis. Morbi accumsan
-                      iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  <h3>Summary</h3>
+                  <p>Versatile, naturally curious engineer with three years of professional experience. Graduate of the
+                    University of Kansas with a degree in Chemical Engineering. Adept at quickly picking up new skills,
+                    meeting tight deadlines, and producing exceptional results with an attention to detail.
+                  </p>
+                  <h3>Education</h3>
+                  <p>University of Kansas &mdash; Chemical Engineering, B.S.<br>
+                  </p>
+                  <h3>Interests &amp; Hobbies</h3>
+                  <ul>
+                    <li>Staying active by playing golf, hiking, skiing, and adventuring backcountry</li>
+                    <li>Maintaining a connection to the outdoors by camping with my dogs and friends in the Rocky
+                      Mountains</li>
+                    <li>Learning handyman skills including fixing appliances and improving functionality around the
+                      house</li>
+                  </ul>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/assets/images/profile-aps-03.png" class="img-responsive" alt="">
