--- a/templates/index.html
+++ b/templates/index.html
@@ -63,8 +63,8 @@
                             <h1>Hello,<br>
                                 <span id="typed-strings">
                                     <span>I'm Austin Scobee</span>
-                                    <span>Software Engineer</span>
-                                    <span>Python Developer</span>
+                                    <span>Self-Taught Developer</span>
+                                    <!-- <span>Python Developer</span> -->
                                 </span>
                                 <span id="typed"></span>
                             </h1>
