--- a/templates/ARCHIVE/components.html
+++ b/templates/ARCHIVE/components.html
@@ -12,12 +12,11 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>
+  <title>Components</title>
 
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
+  <link href="../../static/main.3f6952e4.css" rel="stylesheet">
 </head>
 
 <body class="">
