--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159921114-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-159921114-1');
+  </script>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
@@ -16,7 +25,7 @@
 
   <link href="./static/favicon.ico" rel="icon">
 
-  <title>Contact me</title>
+  <title>Contact</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -44,10 +53,8 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
+            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
           </ul>
-
-
         </div>
       </div>
     </nav>
@@ -101,11 +108,20 @@
                       </li>
                     </ul>
                     <h3>Social Networks</h3>
-                    <a href="http://www.linkedin.com/in/austin-scobee" title="" class="fa-icon">
+                    <a href="http://www.linkedin.com/in/austin-scobee" target="_blank" title="LinkedIn"
+                      class="fa-icon logo-linkedin">
                       <i class="fab fa-linkedin-in fa-sm"></i>
                     </a>
-                    <a href="http://github.com/ascobee" title="" class="fa-icon">
+                    <a href="http://github.com/ascobee" target="_blank" title="GitHub" class="fa-icon logo-github">
                       <i class="fab fa-github-alt fa-sm"></i>
+                    </a>
+                    <a href="https://www.instagram.com/ascobee1/" target="_blank" title="Instagram"
+                      class="fa-icon logo-instagram">
+                      <i class="fab fa-instagram fa-sm"></i>
+                    </a>
+                    <a href="https://www.facebook.com/austin.scobee.3" target="_blank" title="Facebook"
+                      class="fa-icon logo-facebook">
+                      <i class="fab fa-facebook-f fa-sm"></i>
                     </a>
 
                   </div>
