--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159921114-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-159921114-1');
+  </script>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
@@ -16,7 +25,7 @@
 
   <link href="./static/favicon.ico" rel="icon">
 
-  <title>About me</title>
+  <title>About</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -44,10 +53,8 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
+            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
           </ul>
-
-
         </div>
       </div>
     </nav>
@@ -70,8 +77,11 @@
                     University of Kansas with a degree in Chemical Engineering. Adept at quickly picking up new skills,
                     meeting tight deadlines, and producing exceptional results with an attention to detail.
                   </p>
+                  <!-- <a href="./Austin_Scobee_Resume_2020.pdf" target="_blank"
+                    title="Austin_Scobee_Resume_2020.pdf">Resume</a> -->
                   <h3>Education</h3>
-                  <p>University of Kansas &mdash; Chemical Engineering, B.S.<br>
+                  <p>Programming Languages &mdash; Python, JavaScript, HTML, CSS, PHP<br>
+                    University of Kansas &mdash; Chemical Engineering, B.S.
                   </p>
                   <h3>Interests &amp; Hobbies</h3>
                   <ul>
@@ -83,7 +93,7 @@
                   </ul>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./static/assets/images/profile-aps-03.png" class="img-responsive" alt="">
+                  <img src="./static/assets/images/profile-aps-03.png" class="img-responsive" alt="Austin Scobee">
                 </div>
               </div>
             </div>
