--- a/templates/work2.html
+++ b/templates/work2.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159921114-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-159921114-1');
+  </script>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
@@ -44,7 +53,7 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
+            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
           </ul>
 
 
