--- a/templates/works.html
+++ b/templates/works.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159921114-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-159921114-1');
+  </script>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
@@ -44,10 +53,8 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
+            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
           </ul>
-
-
         </div>
       </div>
     </nav>
@@ -79,9 +86,10 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>001/006</h4>
-                      <h3>Fringilla sit amet</h3>
-                      <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                      <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                      <h3>Password Checker</h3>
+                      <p>Securely check to see if your passwords have been exposed in a data breach via the terminal.
+                      </p>
+                      <a href="./work.html" title="" class="btn btn-default">Read More</a>
                     </div>
                   </div>
                   <div class="col-sm-4">
