--- a/templates/work2.html
+++ b/templates/work2.html
@@ -25,7 +25,7 @@
 
   <link href="./static/favicon.ico" rel="icon">
 
-  <title>Title page</title>
+  <title>002 : Web Scraping</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -66,7 +66,6 @@
             <li><a href="./index.html" title="">006</a></li>
           </ul>
 
-
         </div>
       </div>
     </nav>
@@ -78,12 +77,10 @@
           <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">002 : Fringilla sit amet</h1>
+              <h1 class="h2">002 : Web Scraping</h1>
             </div>
-            <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula,
-              id sodales
-              arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.
-            </p>
+            <p>Get a list of the top stories (>200 points) from the first two pages on <a
+                href="https://news.ycombinator.com/" target="_blank">Hacker News</a>.</p>
 
             <blockquote>
               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
@@ -99,11 +96,11 @@
           <div class="row">
             <div class="col-xs-12 col-md-6">
               <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
-              <p>Menphis skyline</p>
+              <p>Memphis skyline</p>
             </div>
             <div class="col-xs-12 col-md-6">
               <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
-              <p>Menphis skyline</p>
+              <p>Memphis skyline</p>
             </div>
           </div>
         </div>
