--- a/templates/work2.html
+++ b/templates/work2.html
@@ -77,7 +77,7 @@
           <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">002 : Web Scraping</h1>
+              <h1 class="h2">002 : Top Stories</h1>
             </div>
             <p>Get a list of the top stories (>200 points) from the first two pages on <a
                 href="https://news.ycombinator.com/" target="_blank">Hacker News</a>.</p>
