--- a/templates/work.html
+++ b/templates/work.html
@@ -93,17 +93,18 @@
           <div class="row">
             <div class="col-xs-12 col-md-6">
               <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
-              <p>Menphis skyline</p>
+              <p>Memphis skyline</p>
             </div>
             <div class="col-xs-12 col-md-6">
               <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
-              <p>Menphis skyline</p>
+              <p>Memphis skyline</p>
             </div>
           </div>
         </div>
 
         <div class="col-xs-12">
           <img src="./static/assets/images/work001-04.jpg" class="img-responsive" alt="">
+          <!-- <img src="./static/assets/images/passwordcheckerscript.png" class="img-responsive" alt=""> -->
         </div>
 
       </div>
