--- a/templates/works.html
+++ b/templates/works.html
@@ -89,7 +89,7 @@
                       <h3>Password Checker</h3>
                       <p>Securely check to see if your passwords have been exposed in a data breach via the terminal.
                       </p>
-                      <a href="./work.html" title="" class="btn btn-default">Read More</a>
+                      <a href="./work.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -98,8 +98,8 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>002/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <h3>Hacker News: Top Stories</h3>
+                      <p>Get a list of the top stories (>200 points) from the first two pages on Hacker News.</p>
                       <a href="./work2.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
