--- a/templates/works.html
+++ b/templates/works.html
@@ -81,7 +81,7 @@
                 <div class="row">
                   <div class="col-sm-4">
 
-                    <a href="./work.html" title="" class="black-image-project-hover">
+                    <a href="./passwordchecker.html" title="" class="black-image-project-hover">
                       <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
@@ -89,29 +89,29 @@
                       <h3>Password Checker</h3>
                       <p>Securely check to see if your passwords have been exposed in a data breach via the terminal.
                       </p>
-                      <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                      <a href="./passwordchecker.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                   <div class="col-sm-4">
-                    <a href="./work2.html" title="" class="black-image-project-hover">
+                    <a href="./topstories.html" title="" class="black-image-project-hover">
                       <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>002/006</h4>
                       <h3>Hacker News: Top Stories</h3>
                       <p>Get a list of the top stories (>200 points) from the first two pages on Hacker News.</p>
-                      <a href="./work2.html" title="" class="btn btn-default">Discover</a>
+                      <a href="./topstories.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                   <div class="col-sm-4">
-                    <a href="./work.html" title="" class="black-image-project-hover">
+                    <a href="./website-omnifood.html" title="" class="black-image-project-hover">
                       <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>003/006</h4>
-                      <h3>Vivamus vestibulum</h3>
+                      <h3>Website &mdash; Omnifood</h3>
                       <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                      <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                      <a href="./website-omnifood.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
 
