--- a/templates/topstories.html
+++ b/templates/topstories.html
@@ -58,9 +58,9 @@
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./work.html" title="" class="active">001</a></li>
-            <li><a href="./work2.html" title="" class="active">002</a></li>
-            <li><a href="./index.html" title="">003</a></li>
+            <li><a href="./passwordchecker.html" title="" class="active">001</a></li>
+            <li><a href="./topstories.html" title="" class="active">002</a></li>
+            <li><a href="./website-omnifood.html" title="" class="active">003</a></li>
             <li><a href="./index.html" title="">004</a></li>
             <li><a href="./index.html" title="">005</a></li>
             <li><a href="./index.html" title="">006</a></li>
