--- a/templates/website-omnifood.html
+++ b/templates/website-omnifood.html
@@ -25,7 +25,7 @@
 
   <link href="./static/favicon.ico" rel="icon">
 
-  <title>001 : Password Checker</title>
+  <title>003 : Website &mdash; Omnifood.com</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -58,13 +58,14 @@
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./work.html" title="" class="active">001</a></li>
-            <li><a href="./work2.html" title="" class="active">002</a></li>
-            <li><a href="./index.html" title="">003</a></li>
+            <li><a href="./passwordchecker.html" title="" class="active">001</a></li>
+            <li><a href="./topstories.html" title="" class="active">002</a></li>
+            <li><a href="./website-omnifood.html" title="" class="active">003</a></li>
             <li><a href="./index.html" title="">004</a></li>
             <li><a href="./index.html" title="">005</a></li>
             <li><a href="./index.html" title="">006</a></li>
           </ul>
+
         </div>
       </div>
     </nav>
@@ -76,12 +77,13 @@
           <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">001 : Password Checker</h1>
+              <h1 class="h2">003 : Website &mdash; Omnifood.com</h1>
             </div>
-            <p>Securely check to see if your passwords have been exposed in a data breach via the terminal.</p>
+            <p>ADD TEXT HERE...</p>
 
             <blockquote>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
+              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
+              </p>
               <small class="pull-right">Irina Martin</small>
             </blockquote>
           </div>
@@ -103,8 +105,11 @@
         </div>
 
         <div class="col-xs-12">
-          <img src="./static/assets/images/work001-04.jpg" class="img-responsive" alt="">
-          <!-- <img src="./static/assets/images/passwordcheckerscript.png" class="img-responsive" alt=""> -->
+          <figure class="work-main-photo img-rounded">
+            <a href="./omnifood/" target="_blank" title="Visit Website" class="">
+              <img src="./static/assets/images/omnifood-cover-01.png" class="img-responsive" alt="Omnifood Cover">
+            </a>
+          </figure>
         </div>
 
       </div>
