a lot of minor tweaks

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -90,19 +90,19 @@
                     <ul class="list-unstyled">
                       <li>
                         <span class="fa-icon">
-                          <i class="fas fa-phone-alt fa-xs" aria-hidden="true"></i>
+                          <i class="fas fa-phone-alt fa-lg" aria-hidden="true"></i>
                         </span>
                         <a href="tel:+3166555227">+ (316) 655-5227</a>
                       </li>
                       <li>
                         <span class="fa-icon">
-                          <i class="fas fa-at fa-xs" aria-hidden="true"></i>
+                          <i class="fas fa-at fa-lg" aria-hidden="true"></i>
                         </span>
                         austin.scobee&commat;gmail.com
                       </li>
                       <li>
                         <span class="fa-icon">
-                          <i class="fas fa-map-marker-alt fa-xs" aria-hidden="true"></i>
+                          <i class="fas fa-map-marker-alt fa-lg" aria-hidden="true"></i>
                         </span>
                         Arvada, CO
                       </li>
@@ -110,18 +110,18 @@
                     <h3>Social Networks</h3>
                     <a href="http://www.linkedin.com/in/austin-scobee" target="_blank" title="LinkedIn"
                       class="fa-icon logo-linkedin">
-                      <i class="fab fa-linkedin-in fa-sm"></i>
+                      <i class="fab fa-linkedin-in fa-2x"></i>
                     </a>
                     <a href="http://github.com/ascobee" target="_blank" title="GitHub" class="fa-icon logo-github">
-                      <i class="fab fa-github-alt fa-sm"></i>
+                      <i class="fab fa-github-alt fa-2x"></i>
                     </a>
                     <a href="https://www.instagram.com/ascobee1/" target="_blank" title="Instagram"
                       class="fa-icon logo-instagram">
-                      <i class="fab fa-instagram fa-sm"></i>
+                      <i class="fab fa-instagram fa-2x"></i>
                     </a>
                     <a href="https://www.facebook.com/austin.scobee.3" target="_blank" title="Facebook"
                       class="fa-icon logo-facebook">
-                      <i class="fab fa-facebook-f fa-sm"></i>
+                      <i class="fab fa-facebook-f fa-2x"></i>
                     </a>
 
                   </div>
@@ -142,8 +142,8 @@
       <div class="row">
         <div class="col-xs-12">
           <p>
-            Copyright
-            <i class="far fa-copyright fa-sm"></i>
+            Copyright &copy;
+            <!-- <i class="far fa-copyright fa-sm"></i> -->
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
