--- a/templates/passwordchecker.html
+++ b/templates/passwordchecker.html
@@ -92,12 +92,12 @@
         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
-              <a href="./static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
+              <a href="./static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
                 class="">
-                <img src="./static/assets/images/passwordcheckerterminal.png" class="img-responsive img-rounded"
-                  alt="Password Checker Terminal">
+                <img src="./static/assets/images/passwordcheckerscript.png" class="img-responsive img-rounded"
+                  alt="Password Checker Script">
               </a>
-              <p>Password Checker Terminal</p>
+              <p>Password Checker Script</p>
             </div>
             <div class="col-xs-12 col-md-6">
               <img src="./static/assets/images/work001-03.jpg" class="img-responsive img-rounded" alt="">
@@ -108,9 +108,9 @@
 
         <div class="col-xs-12">
           <figure class="">
-            <a href="https://github.com/ascobee/portfolio" target="_blank" title="GitHub Repository" class="">
-              <img src="./static/assets/images/passwordcheckerscript.png"
-                class="img-responsive img-rounded img-centered" alt="Password Checker Script">
+            <a href="https://github.com/ascobee/portfolio" target="_blank" title="Download" class="">
+              <img src="./static/assets/images/passwordcheckerterminal.png"
+                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
             </a>
           </figure>
         </div>
@@ -125,8 +125,8 @@
       <div class="row">
         <div class="col-xs-12">
           <p>
-            Copyright
-            <i class="far fa-copyright fa-sm"></i>
+            Copyright &copy;
+            <!-- <i class="far fa-copyright fa-sm"></i> -->
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
