--- a/templates/topstories.html
+++ b/templates/topstories.html
@@ -95,8 +95,11 @@
         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
-              <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
-              <p>Memphis skyline</p>
+              <a href="./static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge" class="">
+                <img src="./static/assets/images/topstoriesscript.png" class="img-responsive img-rounded"
+                  alt="Top Stories Script">
+              </a>
+              <p>Top Stories Script</p>
             </div>
             <div class="col-xs-12 col-md-6">
               <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
@@ -106,7 +109,12 @@
         </div>
 
         <div class="col-xs-12">
-          <img src="./static/assets/images/work001-04.jpg" class="img-responsive" alt="">
+          <figure class="">
+            <a href="https://github.com/ascobee/portfolio" target="_blank" title="Download" class="">
+              <img src="./static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
+                alt="Top Stories Terminal">
+            </a>
+          </figure>
         </div>
 
       </div>
@@ -119,8 +127,8 @@
       <div class="row">
         <div class="col-xs-12">
           <p>
-            Copyright
-            <i class="far fa-copyright fa-sm"></i>
+            Copyright &copy;
+            <!-- <i class="far fa-copyright fa-sm"></i> -->
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
