--- a/templates/about.html
+++ b/templates/about.html
@@ -24,10 +24,10 @@
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="./static/favicon.ico" rel="icon">
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 
   <title>About</title>
 
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
 
 <body class="">
@@ -91,7 +91,8 @@
                   </ul>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./static/assets/images/profile-aps-03.png" class="img-responsive" alt="Austin Scobee">
+                  <img src="./static/assets/images/profile-aps-03.png" class="img-responsive img-rounded"
+                    alt="Austin Scobee">
                 </div>
               </div>
             </div>
@@ -108,8 +109,8 @@
       <div class="row">
         <div class="col-xs-12">
           <p>
-            Copyright
-            <i class="far fa-copyright fa-sm"></i>
+            Copyright &copy;
+            <!-- <i class="far fa-copyright fa-sm"></i> -->
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
