--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -88,8 +88,8 @@
       <div class="row">
         <div class="col-xs-12">
           <p>
-            Copyright
-            <i class="far fa-copyright fa-sm"></i>
+            Copyright &copy;
+            <!-- <i class="far fa-copyright fa-sm"></i> -->
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
