--- a/templates/works.html
+++ b/templates/works.html
@@ -82,7 +82,7 @@
                   <div class="col-sm-4">
 
                     <a href="./passwordchecker.html" title="" class="black-image-project-hover">
-                      <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive">
+                      <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>001/006</h4>
@@ -94,7 +94,7 @@
                   </div>
                   <div class="col-sm-4">
                     <a href="./topstories.html" title="" class="black-image-project-hover">
-                      <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive">
+                      <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>002/006</h4>
@@ -105,7 +105,7 @@
                   </div>
                   <div class="col-sm-4">
                     <a href="./website-omnifood.html" title="" class="black-image-project-hover">
-                      <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                      <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>003/006</h4>
@@ -123,7 +123,7 @@
                 <div class="row">
                   <div class="col-sm-4">
                     <a href="./work.html" class="black-image-project-hover">
-                      <img src="./static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive">
+                      <img src="./static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
@@ -134,7 +134,7 @@
                   </div>
                   <div class="col-sm-4">
                     <a href="./work.html" class="black-image-project-hover">
-                      <img src="./static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
+                      <img src="./static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container">
                       <h4>005/006</h4>
@@ -146,7 +146,7 @@
 
                   <div class="col-sm-4">
                     <a href="./work.html" class="black-image-project-hover">
-                      <img src="./static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
+                      <img src="./static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container">
                       <h4>006/006</h4>
@@ -185,8 +185,8 @@
       <div class="row">
         <div class="col-xs-12">
           <p>
-            Copyright
-            <i class="far fa-copyright fa-sm"></i>
+            Copyright &copy;
+            <!-- <i class="far fa-copyright fa-sm"></i> -->
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
