--- a/templates/comingsoon.html
+++ b/templates/comingsoon.html
@@ -11,6 +11,7 @@
 
     gtag('config', 'UA-159921114-1');
   </script>
+
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
@@ -24,10 +25,10 @@
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="./static/favicon.ico" rel="icon">
-
-  <title>001 : Password Checker</title>
-
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
+
+  <title>000 : Coming Soon</title>
+
 </head>
 
 <body class="">
@@ -76,9 +77,9 @@
           <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">001 : Password Checker</h1>
+              <h1 class="h2">000 : Coming Soon!</h1>
             </div>
-            <p>Securely check to see if your passwords have been exposed in a data breach via the terminal.</p>
+            <p>ADD TEXT HERE...</p>
 
             <blockquote>
               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
@@ -92,12 +93,10 @@
         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
-              <a href="./static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
-                class="">
-                <img src="./static/assets/images/passwordcheckerscript.png" class="img-responsive img-rounded"
-                  alt="Password Checker Script">
+              <a href="./static/assets/images/work001-02.jpg" target="_blank" title="Click to enlarge" class="">
+                <img src="./static/assets/images/work001-02.jpg" class="img-responsive img-rounded" alt="">
               </a>
-              <p>Password Checker Script</p>
+              <p>Memphis skyline</p>
             </div>
             <div class="col-xs-12 col-md-6">
               <img src="./static/assets/images/work001-03.jpg" class="img-responsive img-rounded" alt="">
@@ -109,8 +108,7 @@
         <div class="col-xs-12">
           <figure class="">
             <a href="https://github.com/ascobee/portfolio" target="_blank" title="Download" class="">
-              <img src="./static/assets/images/passwordcheckerterminal.png"
-                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
+              <img src="../static/assets/images/work001-04.jpg" class="img-responsive img-rounded img-centered" alt="">
             </a>
           </figure>
         </div>
@@ -141,7 +139,6 @@
       navActivePage();
     });
   </script>
-
   <script type="text/javascript" src="./static/main.70a66962.js"></script>
 </body>
 
