--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -89,13 +89,11 @@
         <div class="col-xs-12">
           <p>
             Copyright &copy;
-            <!-- <i class="far fa-copyright fa-sm"></i> -->
-            <script type="text/javascript">
-              document.write(new Date().getFullYear());
-            </script>
+            <script type="text/javascript">document.write(new Date().getFullYear());</script>
             AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
               title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
-              title="Beautiful Free Images">Unsplash</a></p>
+              title="Beautiful Free Images">Unsplash</a>
+          </p>
         </div>
       </div>
     </div>
@@ -107,20 +105,6 @@
     });
   </script>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
--->
   <script type="text/javascript" src="./static/main.70a66962.js"></script>
 </body>
 
