--- a/templates/topstories.html
+++ b/templates/topstories.html
@@ -61,9 +61,9 @@
             <li><a href="./passwordchecker.html" title="" class="active">001</a></li>
             <li><a href="./topstories.html" title="" class="active">002</a></li>
             <li><a href="./website-omnifood.html" title="" class="active">003</a></li>
-            <li><a href="./index.html" title="">004</a></li>
-            <li><a href="./index.html" title="">005</a></li>
-            <li><a href="./index.html" title="">006</a></li>
+            <li><a href="./comingsoon.html" title="">004</a></li>
+            <li><a href="./comingsoon.html" title="">005</a></li>
+            <li><a href="./comingsoon.html" title="">006</a></li>
           </ul>
 
         </div>
@@ -79,8 +79,7 @@
             <div class="text-center">
               <h1 class="h2">002 : Top Stories</h1>
             </div>
-            <p>Get a list of the top stories (>200 points) from the first two pages on <a
-                href="https://news.ycombinator.com/" target="_blank">Hacker News</a>.</p>
+            <p>Get a list of the top stories (>200 points) from the first two pages on Hacker News.</p>
 
             <blockquote>
               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
@@ -128,13 +127,11 @@
         <div class="col-xs-12">
           <p>
             Copyright &copy;
-            <!-- <i class="far fa-copyright fa-sm"></i> -->
-            <script type="text/javascript">
-              document.write(new Date().getFullYear());
-            </script>
+            <script type="text/javascript">document.write(new Date().getFullYear());</script>
             AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
               title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
-              title="Beautiful Free Images">Unsplash</a></p>
+              title="Beautiful Free Images">Unsplash</a>
+          </p>
         </div>
       </div>
     </div>
@@ -146,20 +143,6 @@
     });
   </script>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
--->
   <script type="text/javascript" src="./static/main.70a66962.js"></script>
 </body>
 
