--- a/templates/works.html
+++ b/templates/works.html
@@ -24,10 +24,9 @@
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="./static/favicon.ico" rel="icon">
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 
   <title>Works</title>
-
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
 
 <body class="">
@@ -122,37 +121,37 @@
               <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
-                    <a href="./work.html" class="black-image-project-hover">
+                    <a href="./comingsoon.html" class="black-image-project-hover">
                       <img src="./static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
+                      <h3>Coming Soon!</h3>
                       <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                      <a href="./work.html" class="btn btn-default">Discover</a>
+                      <a href="./comingsoon.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                   <div class="col-sm-4">
-                    <a href="./work.html" class="black-image-project-hover">
+                    <a href="./comingsoon.html" class="black-image-project-hover">
                       <img src="./static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container">
                       <h4>005/006</h4>
-                      <h3>Fringilla sit amet</h3>
+                      <h3>Coming Soon!</h3>
                       <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                      <a href="./work.html" class="btn btn-default">Discover</a>
+                      <a href="./comingsoon.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./work.html" class="black-image-project-hover">
+                    <a href="./comingsoon.html" class="black-image-project-hover">
                       <img src="./static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container">
                       <h4>006/006</h4>
-                      <h3>Vivamus vestibulum</h3>
+                      <h3>Coming Soon!</h3>
                       <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                      <a href="./work.html" class="btn btn-default">Discover</a>
+                      <a href="./comingsoon.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
 
@@ -186,13 +185,11 @@
         <div class="col-xs-12">
           <p>
             Copyright &copy;
-            <!-- <i class="far fa-copyright fa-sm"></i> -->
-            <script type="text/javascript">
-              document.write(new Date().getFullYear());
-            </script>
+            <script type="text/javascript">document.write(new Date().getFullYear());</script>
             AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
               title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
-              title="Beautiful Free Images">Unsplash</a></p>
+              title="Beautiful Free Images">Unsplash</a>
+          </p>
         </div>
       </div>
     </div>
@@ -203,21 +200,6 @@
       navActivePage();
     });
   </script>
-
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
--->
   <script type="text/javascript" src="./static/main.70a66962.js"></script>
 </body>
 
